# python_dev_to_ml

./: .gitignore  1_1_black.py  2_1_ruff.py  3_1_type_hinting.py  3_2_type_hinting.py  3_3_type_hinting.py  4_1_mypy.py  Dockerfile  Makefile  README  main.py  pyproject.toml
