[tool.poetry]
name = "python-dev-to-ml"
version = "0.1.0"
description = ""
authors = ["Niek7110 <niek.7110@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.67"
ipython = "^8.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
