[tool.poetry]
name = "python-dev-to-ml"
version = "0.1.0"
description = ""
authors = ["Niek7110 <niek.7110@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.67"
ipython = "^8.29.0"
black = "^24.10.0"
ruff = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
[tool.ruff]
lint.ignore =["E501"]
lint.select = ["C9","E","F", "W","I"]
line-length = 100
src = ["."]